--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,15 @@
     "allowSyntheticDefaultImports": true,
     "strict": true, "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "noImplicitThis": false,
+    "downlevelIteration": true,
   },
   "include": [
     "src"
